--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "merge-stream": "^1.0.0",
-    "react": "^15.2.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-dom": "^15.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
