--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ll/react-hammerjs",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "ReactJS / HammerJS integration. Support touch events in your React app.",
   "main": "src/Hammer.js",
   "author": "Jed Watson",
@@ -25,7 +25,8 @@
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "merge-stream": "^1.0.0",
-    "react": "^15.2.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-dom": "^15.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
